--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -2,15 +2,19 @@
 
 .container {
   display: flex;
+  height: 570px;
+  flex: 0 0 auto;
+  scroll-snap-align: start;
   flex-direction: column;
   border-radius: 10px;
   background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
   box-shadow: 0 16px 14px 0 #04152d;
   padding: 18px 24px;
-  max-width: 345px;
+  max-width: 365px;
 }
 
 .image {
+  height: fit-content;
   margin-bottom: 26px;
 }
 
@@ -58,4 +62,23 @@
   border-radius: 10px;
   background: var(--color-primary);
   padding: 1px 22px;
+}
+
+/* Mobile devices */
+@media (max-width: 768px) {
+  .container {
+    max-width: 300px;
+    height: fit-content;
+  }
+  .link {
+    font-size: 20px;
+    padding: 1px 16px;
+  }
+  .description
+  {
+    font-size: 14px;
+  }
+  .skill {
+    font-size: 16px;
+  }
 }
